--- a/src/Card/Card.scss
+++ b/src/Card/Card.scss
@@ -8,6 +8,7 @@
 }
 
 .card {
+  font-family: "Outfit", sans-serif;
   background-color: #15263f;
   box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.0952917);
   border-radius: 15px;
@@ -81,15 +82,16 @@
     }
 
     .eth {
-      img {
-        margin-right: 6.48px;
-      }
       display: flex;
       align-items: center;
       font-weight: 600;
       font-size: 16px;
       line-height: 20px;
       color: #00fff8;
+
+      img {
+        margin-right: 6.48px;
+      }
     }
 
     .time {
